--- a/termos.html
+++ b/termos.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Termos e Condições | Jogo do Dragão | Fortune Dragon | Dragon Tiger</title>
-    <meta name="description" content="Termos e Condições do Jogo do Dragão, Fortune Dragon e Dragon Tiger. Confira nesse artigo tudo sobre esse jogo.">
+    <title>Termos e Condições</title>
+    <meta name="description" content="Termos e Condições do Jogo do Dragão.">
     <link rel="canonical" href="https://jogododragao.com.br/termos.html" />
 
     <link rel="stylesheet" href="assets/css/style2.css">
