--- a/politica.html
+++ b/politica.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Politica de  Privacidade | Jogo do Dragão | Fortune Dragon | Dragon Tiger</title>
+    <title>Politica de  Privacidade</title>
     <meta name="description" content="Realize seu Cadastro.">
     <link rel="canonical" href="https://jogododragao.com.br/politica.html" />
 
