--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		
 		<p>Ao explorar os b&ocirc;nus de inscri&ccedil;&atilde;o dispon&iacute;veis nos cassinos online, os jogadores podem maximizar sua divers&atilde;o e potencial de ganhos no Fortune Dragon. Essas ofertas adicionais n&atilde;o s&oacute; prolongam o tempo de jogo, mas tamb&eacute;m proporcionam uma oportunidade emocionante de aumentar os seus lucros.</p>
 		
-	<p>Confira também nossa ><a href="politica.html">política de privacidade</a> e <a href="termos.html">termos de uso</a> do Jogo do Dragão, fortune dragon  e dragon tiger.</p>
+	<p>Confira também nossa ><a href="politica.html" title="politica">política de privacidade</a> e <a href="termos.html" title="termos">termos de uso</a> do Jogo do Dragão, fortune dragon  e dragon tiger.</p>
 
 	</article>
 
