--- a/termos.html
+++ b/termos.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termos e Condições</title>
-    <meta name="description" content="Termos e Condições do Jogo do Dragão.">
+    <meta name="description" content="Confira os Termos e Condições.">
     <link rel="canonical" href="https://jogododragao.com.br/termos.html" />
 
     <link rel="stylesheet" href="assets/css/style2.css">
@@ -21,7 +21,7 @@
 <body>
     <article style="display: none;">
 
-        <h1>Termos e Condi&ccedil;&otilde;es do Jogo do Drag&atilde;o | Fortune Dragon e Dragon Tiger</h1>
+        <h1>Termos e Condi&ccedil;&otilde;es</h1>
         <p>Confira abaixo os termos e condições do jogo do dragão, fortune dragon e dragon tiger.</p>
 
         <h2>1. Termos</h2>
