--- a/politica.html
+++ b/politica.html
@@ -22,6 +22,7 @@
     <article style="display: none;">
 
         <h1>Política de Privacidade</h1>
+        <p>Confira abaixo os termos e condições.</p>
         <h2>Pol&iacute;tica Privacidade</h2>
 
         <p>A sua privacidade &eacute; importante para n&oacute;s. &Eacute; pol&iacute;tica do Jogo do Drag&atilde;o | Fortune Dragon | Dragon Tiger respeitar a sua privacidade em rela&ccedil;&atilde;o a qualquer informa&ccedil;&atilde;o sua que possamos coletar no site&nbsp;<a href="https://jogododragao.com.br/" title="jogo do dragão">Jogo do Dragão</a>, e outros sites que possu&iacute;mos e operamos.</p>
