--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <article style="display:none;">
 	
-		<h1>Jogo do Drag&atilde;o | Fortune Dragon | Veja Como Funciona | Onde Jogar</h1>
+		<h1>Jogo do Dragão: Saiba tudo sobre o Fortune Dragon e Dragon Tiger</h1>
 
 		<p>O Fortune Dragon &eacute; mais um sucesso da PG Soft, uma das provedores de jogos do momento. O jogo &eacute; inspirado na mitologia chinesa e promete dar grandes pr&ecirc;mios para aqueles apostadores que estiverem com sorte.</p>
 		
