--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	
-    <title>Jogo do Dragão | Fortune Dragon | Dragon Tiger | Site Oficial | Link Confiável | Plataforma para Ganha Dinheiro | Apostas Online</title>
+    <title>Jogo do Dragão | Fortune Dragon | Dragon Tiger | Site Oficial com Link Confiável da Plataforma para Ganha Dinheiro Apostas Online</title>
 <meta name="description" content="Jogo do Dragão, Fortune Dragon. Jogar no Cassino Online para Ganhar Dinheiro Real, Link do Jogo e Site Oficial." />
   <meta property="og:image" content="https://jogododragao.com.br/assets/img/ico.png" />
 	<meta property="og:image:width" content="300" />
