--- a/termos.html
+++ b/termos.html
@@ -56,7 +56,7 @@
     <article style="display:none;">
 	
 		<h1>Termos e Condi&ccedil;&otilde;es</h1>
-        <p>Confira abaixo os termos e condições do jogo do dragão, fortune dragon e dragon tiger.</p>
+        <p>Confira abaixo os termos e condições do jogo do dragão, <a href="/" title="fortune dragon">fortune dragon</a> e <a href="/" title="dragon tiger">dragon tiger</a>.</p>
 
         <h2>1. Termos</h2>
         
