--- a/politica.html
+++ b/politica.html
@@ -57,7 +57,7 @@
         <p>Confira abaixo os termos e condições.</p>
         <h2>Pol&iacute;tica Privacidade</h2>
 
-        <p>A sua privacidade &eacute; importante para n&oacute;s. &Eacute; pol&iacute;tica do Jogo do Drag&atilde;o | Fortune Dragon | Dragon Tiger respeitar a sua privacidade em rela&ccedil;&atilde;o a qualquer informa&ccedil;&atilde;o sua que possamos coletar no site&nbsp;<a href="https://jogododragao.com.br/" title="jogo do dragão">Jogo do Dragão</a>, e outros sites que possu&iacute;mos e operamos.</p>
+        <p>A sua privacidade &eacute; importante para n&oacute;s. &Eacute; pol&iacute;tica do <a href="/" title="jogo do dragão">Jogo do Dragão</a>, <a href="/" title="fortune dragon">Fortune Dragon</a> e <a href="/" title="dragon tiger">Dragon Tiger</a> respeitar a sua privacidade em rela&ccedil;&atilde;o a qualquer informa&ccedil;&atilde;o sua que possamos coletar no site&nbsp;<a href="https://jogododragao.com.br/" title="jogo do dragão">Jogo do Dragão</a>, e outros sites que possu&iacute;mos e operamos.</p>
         
         <p>Solicitamos informa&ccedil;&otilde;es pessoais apenas quando realmente precisamos delas para lhe fornecer um servi&ccedil;o. Fazemo-lo por meios justos e legais, com o seu conhecimento e consentimento. Tamb&eacute;m informamos por que estamos coletando e como ser&aacute; usado.</p>
         
