--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		
 		<p><img alt="Fortune Dragon o Jogo do dragão" height="1024" src="assets/img/arena.jpeg" width="595" /></p>
 		
-		<p>Se voc&ecirc; quer conhecer um pouco mais sobre o jogo do drag&atilde;o, saiba que, neste artigo, ensinaremos tudo sobre o fortune dragou. Aqui voc&ecirc; vai entender como o jogo funciona, qual e melhor cassino online para jogar, como voc&ecirc; pode come&ccedil;ar e receber&aacute; dicas para dar os primeiros passos do jeito certo e ter &oacute;timos resultados.</p>
+		<p>Se voc&ecirc; quer conhecer um pouco mais sobre o jogo do drag&atilde;o, saiba que, neste artigo, ensinaremos tudo sobre o fortune dragou. Aqui voc&ecirc; vai entender como o jogo funciona, qual e melhor cassino online é na <a href="https://dupoc.click" title="dupoc">dupoc</a> para jogar, como voc&ecirc; pode come&ccedil;ar e receber&aacute; dicas para dar os primeiros passos do jeito certo e ter &oacute;timos resultados.</p>
 		
 		<h2>Como lucrar com o Fortune Dragon?</h2>
 		
