--- a/cadastro.html
+++ b/cadastro.html
@@ -51,7 +51,7 @@
             var element = document.querySelector(".progress-bar-fill");
   element.classList.add("stripes");
         setTimeout(() => {
-          document.location.href = "https://www.dupoc.com/affiliates/?btag=1621413";
+          document.location.href = "https://www.dupoc.com/affiliates/?btag=1621413_l295477";
          
         },1000);
         },450);
@@ -62,12 +62,12 @@
 		// Redireciona o usuário na intenção de sair da página (Desktop)
     	if( e.clientY < 0 )
     		{
-         		window.location.href = 'https://www.dupoc.com/affiliates/?btag=1621413';
+         		window.location.href = 'https://www.dupoc.com/affiliates/?btag=1621413_l295477';
     		}
 		}, false);
 
 		// Redireciona o usuário ao clicar no botão de voltar (Mobile)
-		var back_link = 'https://www.dupoc.com/affiliates/?btag=1621413';
+		var back_link = 'https://www.dupoc.com/affiliates/?btag=1621413_l295477';
 
 		history.pushState({},"",location.href);
 	    history.pushState({},"",location.href);
